--- a/sl7_control_panel-7.x-1.0.ru.po
+++ b/sl7_control_panel-7.x-1.0.ru.po
@@ -28,8 +28,6 @@ msgid "Access to clear cache on control panel."
 msgstr "Доступ к сбросу кэша в Панели управления."
 msgid "User controls"
 msgstr "Управление пользователя"
-msgid "Inline?"
-msgstr "В линию?"
 msgid "Without time"
 msgstr "Без времени"
 msgid "With time"
@@ -42,3 +40,7 @@ msgid "Invalid e-mail address format."
 msgstr "Неверный формат e-mail адреса."
 msgid "This e-mail already exists. Use the <a href='/user/password?name=@mail'>password recovery form</a>. Or enter another e-mail."
 msgstr "Такой e-mail уже существует. Воспользуйтесь формой <a href='/user/password?name=@mail'>восстановления пароля</a>. Или введите другой e-mail."
+msgid "My dashboard"
+msgstr "Личный кабинет"
+msgid "Log out"
+msgstr "Выйти"
